Fix scrollbar showing for items outside viewport

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body, html {
   font-family: Arial, sans-serif; 
   align-items: center;
   background-color: #212330;
+  overflow: hidden;
 
 }
 
